# glew-cmake

./: .gitignore  CMakeLists.txt
cmake/: GLEWConfig.cmake
